# TurboQuant-AppleMLX-Training-Pipeline

./: .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  PRDv2.md  README.md  TDDv2.md  pyproject.toml
.github/workflows/: ci.yml
docs/: IMPLEMENTATION_PLAN.md  KIVI_PIVOT_BRIEF.md  PRDv2.md  QUALITY_IMPROVEMENT_ROADMAP.md  RESEARCHv2.md  ROTATION_APPROACH_POSTMORTEM.md  TDDv2.md
examples/: compare_bit_widths.py  evaluate_compression_profiles.py  quickstart.py  run_benchmarks.py
mlx_turboquant/: __init__.py  __main__.py  cli.py  constants.py
mlx_turboquant/bench/: __init__.py  latency.py  memory.py  promotion.py  prompts.py  quality.py  report.py
mlx_turboquant/cache/: __init__.py  cache_layout.py  compressed_cache.py  memory_accounting.py
mlx_turboquant/codec/: __init__.py  calibrate.py  codebooks.py  packbits.py  stage1_codec.py  transforms.py
mlx_turboquant/codec/data/: 128_2.json  128_3.json  128_4.json  64_2.json  64_3.json  64_4.json
mlx_turboquant/integration/: __init__.py  compression_profile.py  generate_wrapper.py  mlx_lm_adapter.py
mlx_turboquant/kernels/: __init__.py  metal_attention.py  metal_pack.py
tests/: conftest.py  test_adapter.py  test_backend_parity.py  test_bench.py  test_cache_layout.py  test_calibrate.py  test_cli.py  test_codebooks.py  test_codec.py  test_compressed_cache.py  test_compression_profile.py  test_generate_wrapper.py  test_import.py  test_memory_accounting.py  test_metal_kernels.py  test_packbits.py  test_transforms.py
