[project]
name = "mlx-turboquant"
version = "0.1.0"
description = "Apple-Silicon KV-cache compression for MLX/MLX-LM, inspired by TurboQuant research"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [{ name = "dak" }]
keywords = ["mlx", "apple-silicon", "kv-cache", "quantization", "llm", "compression"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "mlx>=0.22.0",
    "mlx-lm>=0.22.0",
    "numpy>=1.26.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-xdist>=3.5",
    "ruff>=0.8",
    "mypy>=1.13",
    "pre-commit>=4.0",
]
bench = [
    "rich>=13.0",
    "tabulate>=0.9",
]

[project.scripts]
mlx-tq = "mlx_turboquant.cli:main"

[project.urls]
Repository = "https://github.com/dak/mlx-turboquant"
Documentation = "https://github.com/dak/mlx-turboquant#readme"
Issues = "https://github.com/dak/mlx-turboquant/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific rules
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults
]

[tool.ruff.lint.isort]
known-first-party = ["mlx_turboquant"]

[tool.mypy]
python_version = "3.11"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[[tool.mypy.overrides]]
module = ["mlx.*", "mlx_lm.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: marks tests that require model downloads (deselect with '-m \"not slow\"')",
]
addopts = "-v --tb=short"
